--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - run: sudo apt-get install musl-tools
+    - run: sudo apt-get install musl-tools mingw-w64
     - run: make PROG=esputil_linux CC=musl-gcc CFLAGS="-static -s -Os"
     - run: make esputil.exe
     - run: git fetch --prune --unshallow
